--- a/.azuredevops/platformPipelines/platform.updateReadMe.yml
+++ b/.azuredevops/platformPipelines/platform.updateReadMe.yml
@@ -18,7 +18,7 @@ variables:
     value: 'CARML@noreply.github.com'
 
 jobs:
-  - job: Update module tables
+  - job: Update_module_tables
     pool:
       vmImage: 'ubuntu-latest'
     steps:
