--- a/.azuredevops/platformPipelines/platform.updateReadMe.yml
+++ b/.azuredevops/platformPipelines/platform.updateReadMe.yml
@@ -46,3 +46,37 @@ jobs:
             Write-Verbose ($functionInput | ConvertTo-Json | Out-String) -Verbose
 
             Set-GitHubReadMeModuleTable @functionInput -Verbose
+      - task: PowerShell@2
+        displayName: 'Update module folder ReadMe'
+        inputs:
+          targetType: inline
+          pwsh: true
+          script: |
+            # Load used functions
+            . (Join-Path '$(System.DefaultWorkingDirectory)' 'utilities' 'tools' 'Set-GitHubReadMeModuleTable.ps1')
+
+            $functionInput = @{
+              ModulesPath    = Join-Path '$(System.DefaultWorkingDirectory)' 'arm'
+              FilePath       = Join-Path '$(System.DefaultWorkingDirectory)' 'arm/README.md'
+              Organization   = ($(Build.Repository.Name)).split('/')[0]
+              RepositoryName = ($(Build.Repository.Name)).split('/')[1]
+              ColumnsInOrder = @('Name', 'ProviderNamespace','ResourceType')
+            }
+
+            Write-Verbose "Invoke task with" -Verbose
+            Write-Verbose ($functionInput | ConvertTo-Json | Out-String) -Verbose
+
+            Set-GitHubReadMeModuleTable @functionInput -Verbose
+      - task: PowerShell@2
+        displayName: 'Update module folder ReadMe'
+        inputs:
+          targetType: inline
+          pwsh: true
+          script: |
+            git config --global user.email '$(pipelinePrincipalGitUserEmail)'
+            git config --global user.name '$(pipelinePrincipalGitUserName)'
+
+            git pull
+            git add .
+            git commit -m "Push updated Readme file(s)"
+            git push
