--- a/.azuredevops/platformPipelines/platform.updateReadMe.yml
+++ b/.azuredevops/platformPipelines/platform.updateReadMe.yml
@@ -75,7 +75,8 @@ jobs:
           script: |
             git config --global user.email '$(pipelinePrincipalGitUserEmail)'
             git config --global user.name '$(pipelinePrincipalGitUserName)'
-
+            Write-Verbose '$(Build.SourceBranch)' -Verbose
+            git checkout -t origin/$(Build.SourceBranch);
             git pull
             git add .
             git commit -m "Push updated Readme file(s)"
