--- a/.azuredevops/platformPipelines/platform.updateReadMe.yml
+++ b/.azuredevops/platformPipelines/platform.updateReadMe.yml
@@ -78,6 +78,7 @@ jobs:
             Write-Verbose '$(Build.SourceBranch)' -Verbose
             # git checkout -t origin/$(Build.SourceBranch);
             # git pull
-            # git add .
-            # git commit -m "Push updated Readme file(s)"
+            git add .
+            git commit -m "Push updated Readme file(s)"
+            git push $(Build.Repository.Uri) HEAD:$(Build.SourceBranch)
             # git push
