--- a/.azuredevops/platformPipelines/platform.updateReadMe.yml
+++ b/.azuredevops/platformPipelines/platform.updateReadMe.yml
@@ -20,7 +20,10 @@ variables:
 jobs:
   - job: Update_module_tables
     pool:
-      vmImage: 'ubuntu-latest'
+      ${{ if ne($(vmImage), '') }}:
+        vmImage: '$(vmImage)'
+      ${{ if ne($(poolName), '') }}:
+        name: '$(poolName)'
     steps:
       - checkout: self
         persistCredentials: true
@@ -68,7 +71,7 @@ jobs:
 
             Set-GitHubReadMeModuleTable @functionInput -Verbose
       - task: PowerShell@2
-        displayName: 'Update module folder ReadMe'
+        displayName: 'Push changes'
         inputs:
           targetType: inline
           pwsh: true
@@ -76,9 +79,6 @@ jobs:
             git config --global user.email '$(pipelinePrincipalGitUserEmail)'
             git config --global user.name '$(pipelinePrincipalGitUserName)'
             Write-Verbose '$(Build.SourceBranch)' -Verbose
-            # git checkout -t origin/$(Build.SourceBranch);
-            # git pull
             git add .
             git commit -m "Push updated Readme file(s)"
             git push $(Build.Repository.Uri) HEAD:$(Build.SourceBranch)
-            # git push
