updated pool and image names

--- a/.azuredevops/platformPipelines/platform.wiki-sync.yml
+++ b/.azuredevops/platformPipelines/platform.wiki-sync.yml
@@ -18,9 +18,9 @@ variables:
 jobs:
   - job: Update_module_tables
     pool:
-      ${{ if ne($(vmImage), '') }}:
+      ${{ if ne('$(vmImage)', '') }}:
         vmImage: '$(vmImage)'
-      ${{ if ne($(poolName), '') }}:
+      ${{ if ne('$(poolName)', '') }}:
         name: '$(poolName)'
     steps:
       - checkout: self
