--- a/.azuredevops/platformPipelines/platform.wiki-sync.yml
+++ b/.azuredevops/platformPipelines/platform.wiki-sync.yml
@@ -28,6 +28,20 @@ jobs:
       - checkout: self
         displayName: Checkout Source Repo
         persistCredentials: true
-      - checkout: '$(wikiRepository)'
-        displayName: Checkout Wiki Repo
-        persistCredentials: true
+      # Create a variable
+      - task: PowerShell@2
+        displayName: 'Update general ReadMe'
+        name: setvarStep
+        inputs:
+          targetType: inline
+          pwsh: true
+          script: |
+            $wikiRepository = '$(Build.Repository.Uri)' + '.wiki'
+            echo "##vso[task.setvariable variable=wikiRepository;isOutput=true]$wikiRepository" # remember to use double quotes
+      - task: PowerShell@2
+        displayName: 'Update general ReadMe'
+        inputs:
+          targetType: inline
+          pwsh: true
+          script: |
+            Write-Verbose $(setvarStep.myOutputVar) -Verbose
