--- a/.azuredevops/platformPipelines/platform.wiki-sync.yml
+++ b/.azuredevops/platformPipelines/platform.wiki-sync.yml
@@ -38,12 +38,12 @@ jobs:
           script: |
             $wikiRepository = '$(Build.Repository.Uri)' + '.wiki'
             Write-Verbose $wikiRepository -Verbose
-            echo "##vso[task.setvariable variable=wikiRepository;isOutput=true]$wikiRepository" # remember to use double quotes
-            Write-Verbose $(myOutputVar) -Verbose
+            echo "##vso[task.setvariable variable=wikiRepositoryVar;isOutput=true]$wikiRepository" # remember to use double quotes
+            Write-Verbose $(wikiRepositoryVar) -Verbose
       - task: PowerShell@2
         displayName: 'Update general ReadMe'
         inputs:
           targetType: inline
           pwsh: true
           script: |
-            Write-Verbose $(setvarStep.myOutputVar) -Verbose
+            Write-Verbose $(setvarStep.wikiRepositoryVar) -Verbose
