--- a/.azuredevops/platformPipelines/platform.wiki-sync.yml
+++ b/.azuredevops/platformPipelines/platform.wiki-sync.yml
@@ -39,7 +39,7 @@ jobs:
             $wikiRepository = '$(Build.Repository.Uri)' + '.wiki'
             Write-Verbose $wikiRepository -Verbose
             echo "##vso[task.setvariable variable=wikiRepositoryVar;isOutput=true]$wikiRepository" # remember to use double quotes
-            Write-Verbose $(wikiRepositoryVar) -Verbose
+            Write-Verbose $wikiRepositoryVar -Verbose
       - task: PowerShell@2
         displayName: 'Update general ReadMe'
         inputs:
