--- a/.azuredevops/platformPipelines/platform.wiki-sync.yml
+++ b/.azuredevops/platformPipelines/platform.wiki-sync.yml
@@ -39,10 +39,6 @@ jobs:
             $wikiRepository = '$(Build.Repository.Uri)' + '.wiki'
             Write-Verbose $wikiRepository -Verbose
             echo "##vso[task.setvariable variable=wikiRepositoryVar;isOutput=true]$wikiRepository" # remember to use double quotes
-      - task: PowerShell@2
-        displayName: 'Update general ReadMe'
-        inputs:
-          targetType: inline
-          pwsh: true
-          script: |
-            Write-Verbose $(setvarStep.wikiRepositoryVar) -Verbose
+      - checkout: $(setvarStep.wikiRepositoryVar)
+        displayName: Checkout Source Repo
+        persistCredentials: true
