--- a/.azuredevops/platformPipelines/platform.wiki-sync.yml
+++ b/.azuredevops/platformPipelines/platform.wiki-sync.yml
@@ -31,24 +31,28 @@ jobs:
         persistCredentials: true
       # Create a variable
       - task: PowerShell@2
-        displayName: 'Update general ReadMe'
+        displayName: 'Checkout Wiki Repo'
         name: setvarStep
         inputs:
           targetType: inline
           pwsh: true
           script: |
-            # $wikiRepository = '$(Build.Repository.Uri)' + '.wiki'
-            # Write-Verbose $wikiRepository -Verbose
-            # echo "##vso[task.setvariable variable=wikiRepositoryVar;isOutput=true]$wikiRepository" # remember to use double quotes
-
-
             git config --global user.email '$(pipelinePrincipalGitUserEmail)'
             git config --global user.name '$(pipelinePrincipalGitUserName)'
             $repositoryEndpoint= 'https://' + '$(PAT)' + '@github.com/' + '$(Build.Repository.Name)' + '.wiki'
             Write-Verbose $repositoryEndpoint -Verbose
             git clone $repositoryEndpoint
-            dir
-            # Write-Verbose '$(Build.SourceBranch)' -Verbose
-            # git add .
-            # git commit -m "Push updated Readme file(s)"
-            # git push $(Build.Repository.Uri) HEAD:$(Build.SourceBranch)
+            ls
+            cd '$(System.DefaultWorkingDirectory)'
+            ls
+
+      # - task: PowerShell@2
+      #   displayName: 'Sync docs/wiki Into Wiki Repo'
+      #   name: setvarStep
+      #   inputs:
+      #     targetType: inline
+      #     pwsh: true
+      #     script: |
+      #       $docsPath = Join-Path '$(System.DefaultWorkingDirectory)' 'docs' 'wiki'
+      #       $wikiRepo = Join-Path '$(System.DefaultWorkingDirectory)' '$(Build.Repository.Name)' '.wiki'
+      #       rsync -avzr --delete --exclude='.git/' $docsPath "${{ env.wiki_target_repo }}"
