--- a/.azuredevops/platformPipelines/platform.wiki-sync.yml
+++ b/.azuredevops/platformPipelines/platform.wiki-sync.yml
@@ -47,13 +47,11 @@ jobs:
           script: |
             ls
             $docsPath = Join-Path '$(System.DefaultWorkingDirectory)' 'docs' 'wiki'
-            Write-Verbose $docsPath -Verbose
             $repositoryName = ('$(Build.Repository.Name)').split('/')[1]
             $wikiPath = $repositoryName + '.wiki'
-            Write-Verbose $wikiPath -Verbose
             $wikiRepository = Join-Path '$(System.DefaultWorkingDirectory)' $wikiPath
-            Write-Verbose $wikiRepository -Verbose
             rsync -avzr --delete --exclude='.git/' $docsPath $wikiRepository
             cd $wikiRepository
             git add .
             git commit -m "Push updated Wiki"
+            git push
