--- a/.azuredevops/platformPipelines/platform.wiki-sync.yml
+++ b/.azuredevops/platformPipelines/platform.wiki-sync.yml
@@ -45,13 +45,12 @@ jobs:
           targetType: inline
           pwsh: true
           script: |
-            ls
             $docsPath = Join-Path '$(System.DefaultWorkingDirectory)' 'docs' 'wiki'
-            $repositoryName = ('$(Build.Repository.Name)').split('/')[1]
-            $wikiPath = $repositoryName + '.wiki'
+            $wikiPath = ('$(Build.Repository.Name)').split('/')[1] + '.wiki'
             $wikiRepository = Join-Path '$(System.DefaultWorkingDirectory)' $wikiPath
             rsync -avzr --delete --exclude='.git/' $docsPath $wikiRepository
             cd $wikiRepository
             git add .
             git commit -m "Push updated Wiki"
             git push
+            git push $(Build.Repository.Uri) HEAD:$(Build.SourceBranch)
