--- a/.azuredevops/platformPipelines/platform.wiki-sync.yml
+++ b/.azuredevops/platformPipelines/platform.wiki-sync.yml
@@ -50,6 +50,7 @@ jobs:
             $wikiRepository = Join-Path '$(System.DefaultWorkingDirectory)' $wikiPath
             rsync -avzr --delete --exclude='.git/' $docsPath $wikiRepository
             cd $wikiRepository
+            git remote set-url origin $('https://' + '$(PAT)' + '@github.com/' + '$(Build.Repository.Name)' + '.wiki')
             git add .
             git commit -m "Push updated Wiki"
             git push
